# smart-storage-operator

./: .gitignore  Cargo.toml  Dockerfile  README.md
benches/: node_registry.rs
src/: error.rs  lib.rs  main.rs
src/cache/: compression.rs  entry.rs  events.rs  lru.rs  manager.rs  metrics.rs  mod.rs  prefetch.rs  tier.rs
src/cache/storage/: local.rs  memory.rs  mod.rs  persistent.rs
src/controlplane/: mod.rs  orchestrator.rs
src/controlplane/api/: mod.rs  rest.rs  server.rs
src/controlplane/backends/: mayastor.rs  mod.rs  rustfs.rs  seaweedfs.rs
src/controlplane/platform/: harvester.rs  mod.rs  openstack.rs
src/crd/: mod.rs  storage_node.rs  unified_pool.rs  unified_storage.rs
src/domain/: mod.rs  ports.rs
src/hardware/: mod.rs
src/hardware/allocation/: allocator.rs  mod.rs  placement.rs  policy.rs
src/hardware/classification/: classifier.rs  fingerprint.rs  mod.rs
src/hardware/discovery/: mod.rs  nvme.rs  sas_sata.rs  scanner.rs
src/hardware/registry/: events.rs  mod.rs  node_registry.rs
