[package]
name = "smart-storage-operator"
version = "0.2.0"
edition = "2021"
authors = ["BillyRonks Global Limited <engineering@billyronks.io>"]
description = "Unified Control Plane Orchestrator for Block/File/Object storage"
license = "Apache-2.0"
repository = "https://github.com/billyronks/smart-storage-operator"
keywords = ["kubernetes", "operator", "storage", "mayastor", "tiering", "ceph-killer"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "smart_storage_operator"
path = "src/lib.rs"

[dependencies]
# Kubernetes
kube = { version = "0.88", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.21", features = ["v1_29"] }

# Async runtime
tokio = { version = "1.36", features = ["full", "tracing"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP client (for Prometheus and backends)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# REST API server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
tokio-util = "0.7"

# Schema generation
schemars = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Metrics exposition
prometheus = "0.13"
hyper = { version = "0.14", features = ["server", "tcp"] }

# Utilities
parking_lot = "0.12"
dashmap = "5.5"
backoff = { version = "0.4", features = ["tokio"] }
urlencoding = "2.1"
glob = "0.3"

[dev-dependencies]
tokio-test = "0.4"
assert_matches = "1.5"
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "smart-storage-operator"
path = "src/main.rs"

[[bench]]
name = "node_registry"
harness = false
